includes/modules/board/skins/sketchbook5/css/board.css
/* ... */
/* android 800x480 landscape */
@media screen and (max-width:533px){
.m_no,.lst_btn,.show_srch,.bd .cTab li ul,#bd_srch,.simple_wrt .profile,.rd_hd .blog .wave,.bd_hd .rd_nav,
.bd_tb_lst .no,.bd_tb_lst .cate,#cloud_btn,
.bd_wrt .color_wrp{display:none !important}
#re_cmt .editor_select{display:block !important}
.bd .bd_hd{padding:0}
.bd_bc{overflow:hidden;float:none !important;padding:10px}
.bd_hd.v2 .bd_bc{border-top:1px solid #DDD;background:#FCFCFC}
.bd_cnb{padding-left:48px}
.bd_cnb .bg_f_f9{padding:3px 7px !important}
.bd_cnb a.home{width:52px}
.bd .cTab{margin-left:0;border:0}
.bd .cTab>li{width:20%;margin:0 !important;border:0 !important;text-align:center}
.bd .cTab>li a{position:static;display:block;float:none;top:0;margin:-1px -1px 0 0;padding:2px !important;border:1px solid #CCC}
.bd .cTab>li.on a{position:relative;border-color:#999}
.cnb3{margin:0 2px}
.cnb3>li{float:left !important;width:20%}
.cnb3>li>a{padding:6px}
.btm_mn{padding:10px 5px 0}
.rd{padding:0;box-shadow:none}
.rd_hd{margin:0 0 20px !important}
.rd_hd .board .top_area{margin:0;padding:20px 12px;border-width:1px 0 0;border-radius:0;box-shadow:none;background:none}
.rd_hd .board .top_area .cate{display:block;float:none;padding:0 2px 6px}
.rd_hd .board h1{overflow:visible;padding:0;font-size:20px;line-height:1.2;white-space:normal}
.rd_hd .board .btm_area{margin:-12px 12px 0;padding:0 0 18px;background:none}
.rd_hd .board .side{float:none;padding:0}
.rd_hd .board .side>*{padding:0 8px 0 2px}
.rd_body{margin:0 12px 24px}
.rd_sign{padding:4%}
.bd_prev_next{border-top:1px solid #EEE}
.bd_prev_next a{clear:both;max-width:none;margin:12px 2px 0}
.to_sns.big a{margin:0 2px}
.bd .img_tx a{font-size:12px}
.bd .img_tx .fa{font-size:14px}
.rd_ft_nav{padding-bottom:20px}
.rd_ft_nav .btn_img{height:36px;padding-top:8px}
.rd_nav a{padding:9px;opacity:1}
.rd_ft_nav .rd_nav .edit:nth-last-child(2){border:0}
.fdb_v2 .fdb_lst{padding:52px 12px 12px}
.fdb_tag{margin:0}
.fdb_itm,.bd_guest .fdb_itm{padding:10px 10px 10px 60px !important}
.fdb_itm .profile{width:40px;height:40px;margin-left:-50px !important;padding:0;border:0;font-size:24px;line-height:40px}
.fdb_nav{position:static;padding-top:5px;text-align:right}
.fdb_nav a,.fdb_nav_btm .re_comment{height:auto !important}
.cmt_editor{padding-bottom:60px !important}
.simple_wrt{position:static;margin:0}
.simple_wrt textarea{font-size:14px}
.cmt_wrt .simple_wrt textarea{min-height:96px !important}
.simple_wrt .bd_btn{position:absolute;top:100%;right:-1px;width:100%;height:34px;margin-top:12px;font-weight:700;line-height:32px}
.edit_opt{display:block !important}
.edit_opt .itx{width:100%}
.bd_wrt_main{padding:12px}
.bd_wrt_hd .category{max-width:80px;margin-right:4px}
.bd_wrt .regist .bd_btn{margin:2px}
.bd_wrt .regist .cancle{position:static}
.context_data,.context_message{margin:0}
.et_vars th{min-width:0;padding:6px 18px 6px 12px}
.bd_tb_lst th{font-size:13px}
.bd_tb_lst td{position:relative;padding:12px 4px;font-size:10px}
.bd_tb_lst td.title{padding:8px}
.bd_tb_lst td.title a{position:static;font-size:14px}
.bd_tb_lst .extraimages{margin:0}
.bd_tb_lst .hx:after{content:"";display:block;position:absolute;top:0;right:0;bottom:0;left:0}
.bd_tb_lst .author{min-width:50px;white-space:normal}
.bd_guest .sum{margin:10px 5px}
.bd_guest .bd_wrt_main{margin:0 12px 32px}
.bd_guest .guest_cmt{margin:4px 0 20px}
.guest_itm{padding:10px}
.guest_profile .img,.bd_guest .fdb_itm .profile{width:40px;height:40px;margin:0 12px 0 0;line-height:40px}
.guest_itm_nav{padding:4px}
.bd_guest .cmt_editor{margin:12px}
.rd_blog{margin:0;padding:0;box-shadow:none}
.bd_faq_srch_wrp,.bd_faq.faq_official .a{padding:10px}
.bd_faq.faq_official .mrkA{float:none;margin-left:-11px}
}
/* android HD */
@media screen and (max-width:360px){
.bd .cTab>li,.cnb3>li{width:25%}
.bd_tb_lst img[alt="file"]{display:none}
.bd_cloud.no_rd a{width:260px}
.bd_zine.zine .info>span{font-size:10px}
}
/* android 800x480, iphone */
@media screen and (max-width:320px){
.hide_w320{display:none !important}
}
/* Viewer */
@media only screen and (max-width:960px){
body.viewer{padding:0}
#viewer .bd_prev_next,#viewer .rd_nav_side{display:none !important}
#viewer_lst{margin-left:-5px}
}
@media only screen and (max-width:420px){
#viewer_lst{display:none !important}
}

